deployment3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webgatos-deployment
spec:
  strategy:
    type: Recreate # ciclo de vida del pod, si se muere crea otro nuevo
  replicas: 2
  selector:
    matchLabels:
      app: webgatos
  template:
    metadata:
      labels:
        app: webgatos
    spec:
      containers:
        - name: webgatos
          image: codeurjc/webgatos:v1
          ports:
            - containerPort: 5000
