pod-volume2.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod2
  labels:
    app: test2
spec:
  containers:
    - name: test-container2
      image: k8s.gcr.io/test-webserver
      volumeMounts:
        - mountPath: /test-pd
          name: test-volume
  volumes:
    - name: test-volume
      hostPath:
        path: /data
        type: Directory # optional
