pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mongo-pod
  labels:
    app: mongo
spec:
  containers:
    - name: mongo
      image: bitnami/mongodb
      ports:
        - containerPort: 3307
