pod-service-pvc.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: task-pv-pod
spec:
    volumes:
      - name: task-pv-storage
        persistentVolumeClaim:
          claimName: task-pv-claim
    containers:
      - name: task-pv-container
        image: nginx
        ports:
          - containerPort: 80
            name: "http-server"
        volumeMounts:
          - mountPath: "/usr/share/nginx/html"
            name: task-pv-storage # el nombre del volumen
---
apiVersion: v1
kind: Service
metadata:
  name: task-pv-service
spec:
  selector:
    app: pod-pvc
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      name: task-pv-pod-port
