service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  type: LoadBalancer
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3307
