service2.yml
apiVersion: v1
kind: Service
metadata:
  name: webgatos-service
  labels:
    app: webgatos
spec:
  selector:
    app: webgatos
  type: NodePort
  ports:
    - protocol: TCP
      port: 5000
      name: webgatos-port
